<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:text="@string/sensor_name_label"
            android:textSize="@dimen/large_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:text="@string/rate_label"
            android:textSize="@dimen/small_text_size" />

        <TextView
            android:id="@+id/rate_view"
            android:layout_width="@dimen/data_view_width"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:text="@string/initial_value_text"
            android:textSize="@dimen/small_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:text="@string/accuracy_label"
            android:textSize="@dimen/small_text_size" />

        <TextView
            android:id="@+id/accuracy_view"
            android:layout_width="@dimen/data_view_width"
            android:layout_height="wrap_content"
            android:text="@string/initial_value_text"
            android:textSize="@dimen/small_text_size" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:text="@string/x_label"
        android:textSize="@dimen/small_text_size" />

    <jp.ac.titech.itpro.sdl.accelgraph.GraphView
        android:id="@+id/x_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:text="@string/y_label"
        android:textSize="@dimen/small_text_size" />

    <jp.ac.titech.itpro.sdl.accelgraph.GraphView
        android:id="@+id/y_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:text="@string/z_label"
        android:textSize="@dimen/small_text_size" />

    <jp.ac.titech.itpro.sdl.accelgraph.GraphView
        android:id="@+id/z_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>
